Changed spacing in redesign article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12166,6 +12166,12 @@ a.bd-backtotop-1:hover {
 .bd-layoutbox-60 h4 {
   text-align: center;
 }
+.bd-layoutbox-60 {
+  margin-top: 0;
+}
+.bd-containereffect-256 {
+  margin-top: 35px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYx {}
 .bd-layoutbox-61 {
@@ -12344,6 +12350,14 @@ a.bd-backtotop-1:hover {
 .bd-layoutbox-77 h4 {
   text-align: center;
 }
+.bd-layoutbox-77 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.bd-containereffect-261 {
+  margin-top: 35px;
+  margin-bottom: 0px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc5 {}
 .bd-layoutbox-79 {
@@ -12356,6 +12370,12 @@ a.bd-backtotop-1:hover {
 }
 .bd-layoutbox-79 h4 {
   text-align: center;
+}
+.bd-layoutbox-79 {
+  margin-top: 0;
+}
+.bd-containereffect-264 {
+  margin-top: 32px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDg {}
@@ -12381,6 +12401,12 @@ a.bd-backtotop-1:hover {
 }
 .bd-layoutbox-81 h4 {
   text-align: center;
+}
+.bd-layoutbox-81 {
+  margin-top: 0;
+}
+.bd-containereffect-268 {
+  margin-top: 29px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgz {}
@@ -15144,7 +15170,7 @@ h2.bd-postheader-5 a {
   margin-top: 0;
 }
 .bd-containereffect-44 {
-  margin-top: 47px;
+  margin-top: 0px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjM {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjMy {}
@@ -16473,6 +16499,12 @@ h2.bd-textblock-26 {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI4MA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI4MQ {}
+.bd-textblock-281 {
+  margin-bottom: 0;
+}
+.bd-containereffect-57 {
+  margin-bottom: 35px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI4MQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI4Mw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI4Mw {}
@@ -16728,6 +16760,12 @@ h2.bd-textblock-31 {
   font-weight: bold;
   color: #5bc0de;
 }
+.bd-textblock-328 {
+  margin-bottom: 0;
+}
+.bd-containereffect-162 {
+  margin-bottom: 29px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMyOA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMyOQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMyOQ {}
@@ -16814,7 +16852,7 @@ h2.bd-textblock-31 {
 }
 .bd-containereffect-210 {
   margin-top: 31px;
-  margin-bottom: 7px;
+  margin-bottom: 32px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1Mg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1NA {}
@@ -16921,6 +16959,12 @@ h2.bd-textblock-31 {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4NQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4NQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4Nw {}
+.bd-textblock-387 {
+  margin-bottom: 0;
+}
+.bd-containereffect-246 {
+  margin-bottom: 35px;
+}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4Nw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4OQ {}
 .bd-textblock-389 {
