--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -364,7 +364,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: Open Sans;
+  font-family: 'Open Sans', Arial, 'Arial Unicode MS', Helvetica, sans-serif;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
