--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14406,10 +14406,8 @@ body.bd-homepage .bd-headerarea-1 {
 }
 .bd-button-102:hover,
 .bd-button-102:focus {
-  background-color: #ffffff;
   text-decoration: none;
-  color: #57d175;
-  background-image: none;
+  color: #c266ff;
 }
 .bd-button-102:active {
   background-color: #ffffff;
@@ -15136,6 +15134,14 @@ h2.bd-postheader-5 a {
   font-weight: bold;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xNw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xOA {}
+.bd-section-18 {
+  background-color: #57d175;
+}
+.bd-section-18 h1 {
+  font-family: 'Archivo Black', Arial, 'Arial Unicode MS', Helvetica, sans-serif;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xOA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xOQ {}
 .bd-section-19 {
   margin-bottom: 0px;
@@ -19024,7 +19030,7 @@ h4.bd-textblock-9 {
 .bd-textblock-95 {
   padding-right: 0px;
   padding-left: 0px;
-  margin: 46px 0px 18px;
+  margin: 100px 0px 18px;
 }
 @media (max-width: 767px) {
   .bd-textblock-95 {
@@ -19032,7 +19038,7 @@ h4.bd-textblock-9 {
   }
 }
 h1.bd-textblock-95 {
-  color: #57d175;
+  color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk2 {}
